src/test/deca/syntax/valid/negative_pars_01.deca
// Description:
//    Programme minimaliste utilisant println.
//
// Resultats:
//      -1
//
// Historique:
//    cree le 04/01/2023

{

        int a = -1;
        println(a);

}
