src/test/deca/syntax/invalid/nbr_lex_01.deca
// Description:
//    tests de programme incorrect lexicalement (décimal incorrect)
//
// Resultats:
//    Ligne 11: Erreur, décimal incorrect (point en trop)
//
//
// Historique:
//    cree le 04/01/2023

1.2.3